<resources>
    <string name="friend_requests">Friend Requests</string>
    <string name="this_language">English</string>
    <string name="terms_and_privacy">Terms &amp; Privacy</string>
    <string name="login_sign_up">Sign up</string>
    <string name="login_login">Login</string>
    <string name="login_slider_text_1_phone">Bringing <font color="#c3ff01"> fans </font> together</string>
    <string name="bringing">Bringing </string>
    <string name="fans"> fans </string>
    <string name="together"> together</string>
    <string name="login_login_email">Email</string>
    <string name="login_login_password">Password</string>
    <string name="login_login_forgot_text">Forgot?</string>
    <string name="login_login_message_login_failed">Login failed. Try again later!</string>
    <string name="login_login_message_authentication_failed">Login failed. Check user name and password!</string>
    <string name="forgot_password_text">Reset your password</string>
    <string name="forgot_password_button_text">Reset Password</string>
    <string name="forgot_password_message">Please check your email for password reset options.</string>
    <string name="forgot_password_error_message">Please enter a valid email address!</string>
    <string name="forgot_password_error">Error</string>
    <string name="sign_up_facebook">Sign up with Facebook</string>
    <string name="sign_up_or">or</string>
    <string name="sign_up_first_name">First name</string>
    <string name="sign_up_last_name">Last name</string>
    <string name="sign_up_username">Display name</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_phone">Phone</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_sign_up">Sign up</string>
    <string name="sign_up_text">By singing up, you are agree to Fanschart\'\"s <font color="@android:color/white"> Terms and Conditions of Use </font> and <font color="@android:color/white">Privacy Policy.</font></string>
    <string name="demo" translatable="false">demo</string>
    <string name="scrolling_news_demo_value" translatable="false">Sporting CP pens deal with FHK</string>
    <string name="fist_name_warning">Please fill in your first name.</string>
    <string name="email_validation_warning">Please fill in your email.</string>
    <string name="display_name_validation_warning" translatable="false">Please fill in your display name.</string>
    <string name="password_validation_warning">Please fill in your password.</string>
    <string name="phone_number_validation_warning">Please fill in your phone number.</string>
    <string name="last_name_validation_warning">Please fill in your last name.</string>
    <string name="dialog_ok">OK</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="dialog_warning">Warning</string>
    <string name="uploading">Uploading…</string>
    <string name="english">English</string>
    <string name="chinese" translatable="false">Chinese</string>
    <string name="portuguese" translatable="false">Portuguese</string>
    <string name="dialog_message_not_valid_email">Please enter a valid email address!</string>
    <string name="dialog_internet_connection_failed">You need to be connected to the internet to do this</string>
    <string name="dialog_message_facebook_error">Your public profile could not be received. Please try again!</string>
    <string name="wall_fragment_caption">Wall</string>
    <string name="video_chat_fragment_caption">Video Chat</string>
    <string name="news_fragment_caption">News</string>
    <string name="rumors_fragment_caption">Rumors</string>
    <string name="shop_fragment_caption">Shop</string>
    <string name="club_radio_caption">Club Radio</string>
    <string name="club_tv_caption">Club TV</string>
    <string name="fantasy_caption">Fantasy</string>
    <string name="statistics_caption">Statistics</string>
    <string name="chat_caption">Chat</string>
    <string name="shop_caption">Shop</string>
    <string name="rumours_caption">Rumours</string>
    <string name="video_chat_caption">Video Chat</string>
    <string name="wall_caption">Wall</string>
    <string name="news_caption">News</string>
    <string name="quiz_caption">Quiz</string>
    <string name="coins_caption">YOU HAVE</string>
    <string name="days">" Days "</string>
    <string name="no_message_text">No one has started chatting yet! Why not be the first?</string>
    <string name="permission_microphone_rationale">Please enable microphone in order to send voice message.</string>
    <string name="permission_microphone_denied">You need to enable microphone in settings to send audio messages.</string>
    <string name="permission_microphone_never_ask">Never ask for audio recording permission again.</string>
    <string name="video_chat_permission_microphone_and_camera_rationale">Please enable microphone and camera in order to use video chat.</string>
    <string name="video_chat_permission_microphone_and_camera_denied">You need to enable microphone and camera in settings to use video chat.</string>
    <string name="video_chat_permission_microphone_never_ask">Never ask for audio and video recording permission again.</string>
    <string name="permission_camera_rationale">Please enable camera permissions in settings.</string>
    <string name="permission_camera_denied">You need to enable camera in settings to take image.</string>
    <string name="permission_camera_never_ask">Never ask for camera permission again.</string>
    <string name="share_using">Share with:</string>
    <string name="enter_comment_hint">Enter a comment …</string>
    <string name="this_chat_is_public">This chat is public</string>
    <string name="this_chat_is_private">This chat is private</string>
    <string name="manage_public_chat_caption">Add friends to %1s</string>
    <string name="create_chat">Create Chat</string>
    <string name="join_chat">Join Chat</string>
    <string name="your_stash">Your Stash</string>
    <string name="your_wallet">Your Wallet -</string>
    <string name="your_profile">Your Profile</string>
    <string name="contact_info">Contact info</string>
    <string name="subscribed_since">Subscribed since</string>
    <string name="location_caption">Location</string>
    <string name="password_caption">Password</string>
    <string name="image">image</string>
    <string name="chosen_language">Chosen language</string>
    <string name="your_statement">Your Statement</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="friend_profile">Friend Profile</string>
    <string name="member_since">Member since</string>
    <string name="follows_you">Follows you</string>
    <string name="following_member">Following member</string>
    <string name="your_friends_title">Your Friends</string>
    <string name="your_friends_search_hint">Search your friends</string>
    <string name="your_friends_request">Friend requests</string>
    <string name="time_info_player" translatable="false">%1$tM:%1$tS / %2$tM:%2$tS</string>
    <string name="video_chat_text_1"><![CDATA[ Watch the match with your <font color="#c3ff01">friends.</font>]]></string>
    <string name="video_chat_text_1_phone">Watch the match with your <font color="#c3ff01">friends.</font></string>
    <string name="video_chat_text_2">
        Video chat allows you to call up to 3 friends for a\n
        group video chat, so you can experience the action\n
        with the people you love wherever you are!</string>
    <string name="video_chat_button_text">Begin your call</string>
    <string name="starting_new_call_search_hint">Search public chats</string>
    <string name="starting_new_call_search_title">Starting New Call</string>
    <string name="edit_information">Edit Information</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="nickname">Nickname</string>
    <string name="email_address">Email Address</string>
    <string name="telephone_no">Telephone No</string>
    <string name="member_info">Member info</string>
    <string name="match_day">%1$d Day</string>
    <string name="match_days">%1$d Days</string>
    <string name="match_hour">%1$d Hour</string>
    <string name="match_hours">%1$d Hours</string>
    <string name="match_min">%1$d Min</string>
    <string name="match_mins">%1$d Mins</string>
    <string name="match_sec">%1$d Sec</string>
    <string name="match_secs">%1$d Secs</string>
    <plurals name="days_until_match">
        <item quantity="zero">TODAY</item>
        <item quantity="one">%d Day</item>
        <item quantity="other">%d Days</item>
    </plurals>
    <string name="tip_1_text">Try following the official sporting account.</string>
    <string name="tip_1_title">HOW TO FOLLOW THE OFFICIAL SPORTING ACCOUNT</string>
    <string name="tip_1_description">Welcome to Sport Sidekick! Let’s get started by following the Official Sporting account. Official Accounts are owned by players, managers and other official club representatives, following them will mean that you see their updates on your wall.</string>
    <string name="tip_1_end">Congrats! You are now following the Official Sporting CP account, and their Posts will appear on your Wall.</string>
    <string name="tip_1_step_1">View your contacts by tapping the Friends icon on the bottom right of the screen.</string>
    <string name="tip_1_step_2">Tap the Sporting CP avatar to open their details panel.</string>
    <string name="tip_1_step_3">Tap the Follow toggle ON.</string>
    <string name="tip_2_text">Try join the official sporting chat.</string>
    <string name="tip_2_title">HOW TO JOIN THE OFFICIAL SPORTING CHAT</string>
    <string name="tip_2_description">By joining the Official Sporting Chat, you can chat with club representatives and other fans.</string>
    <string name="tip_2_end">You can now join in on the Official Club Chat whenever you want!</string>
    <string name="tip_2_step_1">Open the Chat module by tapping the Chat tab on the top right of the screen.</string>
    <string name="tip_2_step_2">The Sporting Club Chat will already be in your Groups panel along the top of the Chat module.</string>
    <string name="tip_2_step_3">Tap to open this Chat, say hi to everyone!</string>
    <string name="tip_3_text">Try watch a video on Club TV</string>
    <string name="tip_3_title">HOW TO WATCH A VIDEO ON CLUB TV</string>
    <string name="tip_3_description">Club TV is the place to find Sporting TV shows Here\'s how to watch one.</string>
    <string name="tip_3_end">You can share videos to your Wall and in Chat too.</string>
    <string name="tip_3_step_1">Open the Club TV module by tapping the Club TV tab in the bottom right of the screen.</string>
    <string name="tip_3_step_2">Tap a Channel.</string>
    <string name="tip_3_step_3">Tap a Playlist.</string>
    <string name="tip_3_step_4">Tap the video you want to watch.</string>
    <string name="tip_4_text">Try view a news article.</string>
    <string name="tip_4_title">HOW TO VIEW A NEWS ARTICLE</string>
    <string name="tip_4_description">Keep up to date with all the latest Sporting news, here\'s how to view an article.</string>
    <string name="tip_4_end">You can share News posts to the Wall or in Chat, or leave a comment under any Post.</string>
    <string name="tip_4_step_1">Open the News module by tapping the News tab on the top left of the screen.</string>
    <string name="tip_4_step_2">Tap a News post.</string>
    <string name="tip_4_step_3">When you\'re finished, you can swipe left or tap the close button to return to all News posts.</string>
    <string name="tip_5_text">Try view a rumour.</string>
    <string name="tip_5_title">HOW TO VIEW RUMOURS</string>
</resources>