<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/width_500"
    android:layout_marginTop="@dimen/margin_60"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true">


    <!-- TOP BUTTONS CONTAINER -->
    <LinearLayout
        android:id="@+id/top_buttons_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_button_height"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sign_up_login_button"
            android:layout_width="@dimen/space_0"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/margin_1"
            android:layout_weight="1"
            android:background="@color/colorAccentLight"
            android:gravity="center"
            android:text="@string/login_login"
            android:textColor="@color/white_semitransparent" />

        <TextView
            android:id="@+id/your_wallet_button"
            android:layout_width="@dimen/space_0"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/margin_1"
            android:layout_weight="1"
            android:background="@color/colorPrimarySemiLight"
            android:gravity="center"
            android:text="@string/login_sign_up"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_2"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_2"
            android:layout_marginEnd="@dimen/margin_1"
            android:layout_weight="1"
            android:background="@color/colorPrimaryLight" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_2"
            android:layout_weight="1"
            android:background="@color/colorAccent" />
    </LinearLayout>

    <!--  TOP SPLITTER-->
    <View
        android:id="@+id/top_split_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_1"
        android:layout_below="@+id/top_buttons_container"
        android:background="@color/colorPrimary" />

    <!-- CONTENT CONTAINER -->


    <!-- BOTTOM BUTTONS CONTAINER -->
    <RelativeLayout
        android:id="@+id/bottom_buttons_container_sign_up"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_button_height"
        android:layout_alignParentStart="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_below="@+id/content_container"
        android:background="@drawable/popup_login_button_background">

        <TextView
            android:id="@+id/sign_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sign_up_sign_up"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_size_18" />

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/sign_up_progress_bar"
            android:layout_width="@dimen/prodgres_bar"
            android:layout_height="@dimen/prodgres_bar"
            android:elevation="@dimen/elevation_2"
            app:indicatorName="LineSpinFadeLoaderIndicator"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimarySemiLight"
        android:layout_below="@+id/top_split_line"
        android:layout_alignParentStart="true"
        android:clickable="true">

        <LinearLayout
            android:layout_width="@dimen/login_conteiner_width"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/margin_40"
            android:orientation="vertical">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/sign_up_facebook"
                style="@style/button_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_facebook" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginBottom="@dimen/margin_20">

                <View
                    android:layout_width="@dimen/width_50"
                    android:layout_height="@dimen/height_1"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sign_up_or"
                    android:textColor="@color/white"/>

                <View
                    android:layout_width="@dimen/width_50"
                    android:layout_height="@dimen/height_1"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary" />

            </LinearLayout>

            <EditText
                android:id="@+id/sign_up_firstname"
                style="@style/edit_text_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_firstname"
                android:inputType="text" />

            <EditText
                android:id="@+id/sign_up_lastname"
                style="@style/edit_text_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_lastname"
                android:inputType="text" />

            <EditText
                android:id="@+id/sign_up_display_name"
                style="@style/edit_text_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_username"
                android:inputType="text" />

            <EditText
                android:id="@+id/sign_up_email"
                style="@style/edit_text_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_email"
                android:inputType="text" />

            <EditText
                android:id="@+id/sign_up_phone"
                style="@style/edit_text_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_phone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/sign_up_password"
                style="@style/edit_text_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_login_password"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/sign_up_text"
                android:textAlignment="center"
                android:textColor="@color/white_semitransparent"
                android:textSize="@dimen/font_size_10" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
