<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:contentDescription="@null"
            android:src="@drawable/logo_sporting" />


        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp">


                <TextView
                    android:id="@+id/forgot_password_reset_text"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password_text"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="3dp"
                    android:layout_centerVertical="true"
                    android:background="@android:color/white"
                    android:layout_toStartOf="@id/forgot_password_reset_text"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:background="@android:color/white"
                    android:layout_marginLeft="3dp"
                    android:layout_toEndOf="@id/forgot_password_reset_text"
                    />
            </RelativeLayout>


            <EditText
                android:id="@+id/forgot_password_email"
                style="@style/edit_text_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_login_email"
                android:inputType="textEmailAddress" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/forgot_password_resert_button"
                    style="@style/button_login_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password_button_text" />

                <com.wang.avi.AVLoadingIndicatorView
                    android:id="@+id/forgot_password_progress_bar"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:elevation="2dp"
                    app:indicatorName="LineSpinFadeLoaderIndicator"
                    android:layout_centerInParent="true"
                    android:visibility="gone"/>

            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>